Source/WebCore/dom/EventDispatcher.cpp
@@ -125,31 +125,6 @@ void EventDispatcher::dispatchScopedEvent(Node& node, Event& event)
     ScopedEventQueue::singleton().enqueueEvent(event);
 }
 
-void EventDispatcher::dispatchSimulatedClick(Element* element, Event* underlyingEvent, SimulatedClickMouseEventOptions mouseEventOptions, SimulatedClickVisualOptions visualOptions)
-{
-    if (element->isDisabledFormControl())
-        return;
-
-    static NeverDestroyed<HashSet<Element*>> elementsDispatchingSimulatedClicks;
-    if (!elementsDispatchingSimulatedClicks.get().add(element).isNewEntry)
-        return;
-
-    if (mouseEventOptions == SendMouseOverUpDownEvents)
-        dispatchEvent(element, SimulatedMouseEvent::create(eventNames().mouseoverEvent, element->document().defaultView(), underlyingEvent, element));
-
-    if (mouseEventOptions != SendNoEvents)
-        dispatchEvent(element, SimulatedMouseEvent::create(eventNames().mousedownEvent, element->document().defaultView(), underlyingEvent, element));
-    element->setActive(true, visualOptions == ShowPressedLook);
-    if (mouseEventOptions != SendNoEvents)
-        dispatchEvent(element, SimulatedMouseEvent::create(eventNames().mouseupEvent, element->document().defaultView(), underlyingEvent, element));
-    element->setActive(false);
-
-    // always send click
-    dispatchEvent(element, SimulatedMouseEvent::create(eventNames().clickEvent, element->document().defaultView(), underlyingEvent, element));
-
-    elementsDispatchingSimulatedClicks.get().remove(element);
-}
-
 static void callDefaultEventHandlersInTheBubblingOrder(Event& event, const EventPath& path)
 {
     if (path.isEmpty())
